# race_stack_IV24

./: .gitignore  README.md  milestones.md
bringup/: package.xml  setup.py
deprecated/heart_beat/: CMakeLists.txt  package.xml
deprecated/heart_beat/scripts/: heart_beat_listener.py
f1tenth_ws/: frames.gv
f1tenth_ws/install/: local_setup.sh  setup.sh
f1tenth_ws/install/ackermann_mux/lib/ackermann_mux/: ackermann_mux
f1tenth_ws/install/ackermann_mux/share/ackermann_mux/: local_setup.sh  package.sh
f1tenth_ws/install/automatic_emergency_braking/lib/automatic_emergency_braking/: AEB
f1tenth_ws/install/automatic_emergency_braking/share/automatic_emergency_braking/: package.bash  package.sh  package.zsh
f1tenth_ws/install/f1tenth_stack/share/f1tenth_stack/: package.sh
f1tenth_ws/install/joy_teleop/share/joy_teleop/: package.sh
f1tenth_ws/install/key_teleop/share/key_teleop/: package.sh
f1tenth_ws/log/: latest_build
f1tenth_ws/src/AEB/: package.xml  setup.cfg  setup.py
f1tenth_ws/src/AEB/AEB/: AEB.py
f1tenth_ws/src/automatic_emergency_braking/: CMakeLists.txt  package.xml  setup.py
f1tenth_ws/src/automatic_emergency_braking/automatic_emergency_braking/: automatic_emergency_braking.py
f1tenth_ws/src/automatic_emergency_braking/scripts/: aeb_ackermann.py  aeb_base.py  aeb_base.py.bkp
f1tenth_ws/src/bringup/: CMakeLists.txt  package.xml
f1tenth_ws/src/bringup/launch/: bringup_full_stack.py  bringup_full_stack.yaml  bringup_gap_finder.py  bringup_gap_finder.yaml  bringup_global.yaml  bringup_key_teleop.yaml  bringup_safety_NO1.yaml
f1tenth_ws/src/dead_man_switch/: CMakeLists.txt  package.xml
f1tenth_ws/src/dead_man_switch/scripts/: dead_man_switch.py
f1tenth_ws/src/demux/: CMakeLists.txt  package.xml
f1tenth_ws/src/demux/scripts/: demux.py
f1tenth_ws/src/fast_gap_finder/: CMakeLists.txt  package.xml
f1tenth_ws/src/fast_gap_finder/src/: gap_finder_node.cpp
f1tenth_ws/src/gap_finder/: CMakeLists.txt  README.md  package.xml
f1tenth_ws/src/gap_finder/gap_finder/: pid.py
f1tenth_ws/src/gap_finder/scripts/: .gap_finder_base.py.swp  gap_finder.py  gap_finder_base.py  gap_finder_base.py.bkp_ok  gap_finder_min.py  pid.py
f1tenth_ws/src/global_waypoints/: README.md  global_waypoints.py  package.xml  setup.cfg  setup.py
f1tenth_ws/src/global_waypoints/scripts/: global_waypoints.py
f1tenth_ws/src/heart_beat/scripts/: heart_beat_publisher.py
f1tenth_ws/src/jx_gap_finder/: CMakeLists.txt  package.xml
f1tenth_ws/src/jx_gap_finder/jx_gap_finder/: pid.py
f1tenth_ws/src/jx_gap_finder/scripts/: gap_finder_base.py  main.py
f1tenth_ws/src/key_map/: package.xml  setup.cfg  setup.py
f1tenth_ws/src/key_map/key_map/: key_map.py
f1tenth_ws/src/model_predictive_control/scripts/: model_predictive_control.py
f1tenth_ws/src/overtake/: CMakeLists.txt  package.xml
f1tenth_ws/src/overtake/scripts/: overtake.py
f1tenth_ws/src/pure_pursuit/: CMakeLists.txt  package.xml  setup.py
f1tenth_ws/src/pure_pursuit/config/: pure_pursuit.yaml
f1tenth_ws/src/pure_pursuit/scripts/: IV_inner.csv  IV_inner_hope.csv  pure_pursuit_python.py  waypoint_logger.py  waypoint_visualizer.py  waypoint_visualizer_python.py
f1tenth_ws/src/pure_pursuit/scripts/waypoint_files/: chongus_first.csv  chongus_second.csv  mae_b2_traj.csv  waypoint_data.csv  waypoint_data_MLDA.csv
f1tenth_ws/src/safety_node/: CMakeLists.txt  package.xml
f1tenth_ws/src/safety_node/scripts/: safety_node.py
f1tenth_ws/src/safety_node/src/: safety_node.cpp
f1tenth_ws/src/time_to_collision/: CMakeLists.txt  package.xml
f1tenth_ws/src/time_to_collision/scripts/: ttc_base.py
f1tenth_ws/src/wall_follow/: CMakeLists.txt  package.xml  setup.py
f1tenth_ws/src/wall_follow/config/: wall_follow.yaml
f1tenth_ws/src/wall_follow/scripts/: wall_follow.py  wall_follow_timer.py
f1tenth_ws/src/wall_follow/wall_follow/: wall_follow.py
f1tenth_ws/src/wall_follower/: package.xml
f1tenth_ws/src/waypoint_generation/: README.md
hardware/: README.md
hardware/odometry calibration/: odom_calibration.py
hardware/rosbags/rosbag2_2024_02_24-15_05_03/: metadata.yaml
hardware/rosbags/rosbag2_2024_02_24-15_06_35/: metadata.yaml
hardware/rosbags/rosbag2_2024_02_24-15_07_55/: metadata.yaml
hardware/rosbags/rosbag2_2024_02_24-15_10_06/: metadata.yaml
hardware/rosbags/rosbag2_2024_02_24-15_12_07/: metadata.yaml
hardware/rosbags/rosbag2_2024_02_24-15_14_59/: metadata.yaml
meetingMinutes/: 202404023.md
raceline/: centerline.py  pyvenv.cfg
simulator/: README.md  f1tenth_gym_ros.Dockerfile  run_gym_ros.sh
util/trajectory_optimization/: Readme.md  err_requirements.txt  main.py  main_gen_frictionmap.py  main_globaltraj.py  requirements.txt
util/trajectory_optimization/inputs/tracks/: .~lock.modena_2019.csv#  Budapest_map.csv  HESL_map.csv  MLDA.csv
util/trajectory_optimization/maps/: HESL_map.pgm  HESL_map_old.pgm  test_map.yaml
util/trajectory_optimization/outputs/: traj_race_cl.csv
util/trajectory_optimization/outputs/mintime/: controls.csv  lam_g0.csv  lam_x0.csv  states.csv  tire_forces.csv  w0.csv
util/trajectory_optimization/params/: f110.ini
utils/trajectory_optimization/: main.py
utils/trajectory_optimization/inputs/tracks/: e7_floor3_small.csv
utils/trajectory_optimization/maps/: HESL_map.yaml  MLDA (1).pgm  MLDA.pgm  MLDA.yaml
wall_follower/: setup.py
wall_follower/wall_follower/: wall_follower.py
(+25 files in other folders)
