<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>automatic_emergency_braking</name>
  <version>0.0.0</version>
  <description>Automatic Emergency Braking Node using time to collision</description>
  <maintainer email="lukettl15@gmail.com">luthov15</maintainer>
  <maintainer email="benjamintehjh01@gmail.com">bentjh01</maintainer>
  <license>GNU General Public License</license>

  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
