<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>This package contains necessary launch files for f1tenth_icra2024</description>
  <maintainer email="lukettl15@gmail.com">Name</maintainer>
  <license>GNU General Public License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <exec_depend>safety_node</exec_depend>
  <exec_depend>f1tenth_system</exec_depend>
  <exec_depend>time_to_collision</exec_depend>
  <exec_depend>wall_follow</exec_depend>
  <exec_depend>demux</exec_depend>
  <exec_depend>pure_pursuit</exec_depend>
  <exec_depend>wall_follow</exec_depend>
  <exec_depend>gap_finder</exec_depend>
  <exec_depend>automatic_emergency_braking</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
