<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>time_to_collision</name>
  <version>0.0.0</version>
  <description>Time to collision</description>
  <maintainer email="lukettl15@gmail.com">luthov15</maintainer>
  <maintainer email="benjamintehjh01@gmail.com">bentjh01</maintainer>
  <license>GNU General Public License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
